body overflow-x: hidden. fixes #1219

--- a/app/main.css
+++ b/app/main.css
@@ -22,6 +22,7 @@ body {
   background-position: center;
   background-repeat: no-repeat;
   background-size: cover;
+  overflow-x: hidden;
 }
 
 .btn {
